# Titanic_project

./: README.md  Titanic_project_2020100381_JB.ipynb  pyproject.toml
